--- a/style.css
+++ b/style.css
@@ -12,4 +12,21 @@
     color: #0c0e0d;
     font-size: 32px;
     font-family: Dancing Script;
+    text-align: center;
+}
+.texto{
+    background-color: #ffffff;
+}
+.h2{
+    font-family:Embed code;
+    font-size: 24px;
+    color: #0c0e0d;
+}
+.texto-inicial{
+    font-size: 24px;
+    color: #0c0e0d;
+}
+.texto-fonte{
+    font-size: 18px;
+    color:#0c0e0d;
 }
