--- a/style.css
+++ b/style.css
@@ -32,6 +32,32 @@
 }
 .foto{
     width: 33% ;
+    border-radius: 10px;
+    height: 500px;
+}
+.texto-descricao{
+    font-size: 24px;
+    display: inline-block;
+}
+.foto-explorar{
+    text-align: left;
+    width: 500px;
+    height: 500px;
+    display: inline-block;
+}
+.destino{
+    display: flex;
+    align-items: center;
+}
+.ul{
+    text-decoration: none;
+    list-style-type: none;
+    display: flex;
+}
+.topicos{
+    text-decoration: none;
+    list-style-type: none;
+    display: flex;
 }
 .bota.topicos{
     text-decoration: none;
