--- a/style.css
+++ b/style.css
@@ -55,9 +55,13 @@
     display: flex;
 }
 .topicos{
-    text-decoration: none;
-    list-style-type: none;
     display: flex;
+    position: absolute;
+    padding: 1em;
+    list-style-type: none;
+    flex-wrap: wrap;
+    width: 100%;
+    text-align: left;
 }
 .bota.topicos{
     text-decoration: none;
