--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
         color: #0c0e0d;
     }
 .texto{
-    background-color: #ffffff;
+    background-color: #fb77de;
 }
 .texto-inicial{
     font-size: 24px;
