--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
         color: #0c0e0d;
     }
 .texto{
-    background-color: #fb77de;
+    background-color: #ffffff;
 }
 .texto-inicial{
     font-size: 24px;
@@ -74,5 +74,5 @@
     font-size: 24px;
     padding-left: 2em;
     padding-right: 2em;
-    background-color: #0c0e0d;
+    background-color: #ff84de;
 }
