--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
-
+.root{
+    background-color: #f584c9;
+}
 .cabecalho{
     width: 100%;
     background-color: #f584c9;
